// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transforms > extractRawChainData > should extract raw chain data from the issue 1`] = `
{
  "chainId": "42161",
  "chainLogo": "https://github.com/user-attachments/assets/bb30cba1-242f-49a3-95bd-57e5bdee61e5",
  "childCustomGateway": "0x000000000000000000000000000000000000000E",
  "childErc20Gateway": "0x000000000000000000000000000000000000000F",
  "childGatewayRouter": "0x0000000000000000000000000000000000000010",
  "childMultiCall": "0x0000000000000000000000000000000000000011",
  "childWeth": "0x0000000000000000000000000000000000000013",
  "childWethGateway": "0x0000000000000000000000000000000000000014",
  "color": "#FF0000",
  "description": "A test chain.",
  "explorerUrl": "https://explorer.example.com",
  "name": "Test Chain",
  "nativeTokenAddress": "0x0000000000000000000000000000000000000001",
  "nativeTokenLogo": "https://github.com/user-attachments/assets/bb30cba1-242f-49a3-95bd-57e5bdee61e5",
  "nativeTokenName": "Test Token",
  "nativeTokenSymbol": "TST",
  "parentChainId": "1",
  "parentCustomGateway": "0x0000000000000000000000000000000000000007",
  "parentErc20Gateway": "0x0000000000000000000000000000000000000008",
  "parentGatewayRouter": "0x0000000000000000000000000000000000000009",
  "parentMultiCall": "0x000000000000000000000000000000000000000A",
  "parentWeth": "0x000000000000000000000000000000000000000C",
  "parentWethGateway": "0x000000000000000000000000000000000000000D",
  "rollup": "0x0000000000000000000000000000000000000005",
  "rpcUrl": "https://rpc.example.com",
}
`;

exports[`Transforms > transformIncomingDataToOrbitChain > should transform incoming chain data to OrbitChain format 1`] = `
{
  "bridgeUiConfig": {
    "color": "#FF0000",
    "fastWithdrawalTime": 900000,
    "nativeTokenData": {
      "logoUrl": "/images/mockChain_NativeTokenLogo.png",
      "name": "Test Token",
      "symbol": "TEST",
    },
    "network": {
      "description": "This is a test chain.",
      "logo": "/images/mockChain_Logo.png",
      "name": "Test Chain",
    },
  },
  "chainId": 1234567890,
  "confirmPeriodBlocks": 150,
  "ethBridge": {
    "bridge": "0x6c7FAC4edC72E86B3388B48979eF37Ecca5027e6",
    "inbox": "0x6396825803B720bc6A43c63caa1DcD7B31EB4dd0",
    "outbox": "0xc7491a559b416540427f9f112C5c98b1412c5d51",
    "rollup": "0xeedE9367Df91913ab149e828BDd6bE336df2c892",
    "sequencerInbox": "0x529a2061A1973be80D315770bA9469F3Da40D938",
  },
  "explorerUrl": "https://testexplorer.com",
  "isCustom": true,
  "isTestnet": true,
  "name": "Test Chain",
  "nativeToken": "0x0000000000000000000000000000000000000006",
  "parentChainId": 421614,
  "rpcUrl": "https://sepolia-rollup.arbitrum.io/rpc",
  "slug": "test-chain",
  "tokenBridge": {
    "childCustomGateway": "0x0000000000000000000000000000000000000014",
    "childErc20Gateway": "0x0000000000000000000000000000000000000015",
    "childGatewayRouter": "0x0000000000000000000000000000000000000016",
    "childMultiCall": "0x0000000000000000000000000000000000000017",
    "childProxyAdmin": "0x0000000000000000000000000000000000000000",
    "childWeth": "0x0000000000000000000000000000000000000019",
    "childWethGateway": "0x0000000000000000000000000000000000000020",
    "parentCustomGateway": "0x0000000000000000000000000000000000000007",
    "parentErc20Gateway": "0x0000000000000000000000000000000000000008",
    "parentGatewayRouter": "0x0000000000000000000000000000000000000009",
    "parentMultiCall": "0x0000000000000000000000000000000000000010",
    "parentProxyAdmin": "0x0000000000000000000000000000000000000000",
    "parentWeth": "0x0000000000000000000000000000000000000012",
    "parentWethGateway": "0x0000000000000000000000000000000000000013",
  },
}
`;

exports[`Transforms > updateOrbitChainsFile > should add a new testnet chain while preserving order 1`] = `
"{
  \\"mainnet\\": [
    {
      \\"chainId\\": 2,
      \\"name\\": \\"Existing Chain 2\\"
    },
    {
      \\"chainId\\": 4,
      \\"name\\": \\"Existing Chain 4\\"
    },
    {
      \\"chainId\\": 1,
      \\"name\\": \\"Existing Chain 1\\"
    }
  ],
  \\"testnet\\": [
    {
      \\"chainId\\": 3,
      \\"name\\": \\"Existing Testnet 1\\"
    },
    {
      \\"chainId\\": 5,
      \\"confirmPeriodBlocks\\": 45818,
      \\"ethBridge\\": {
        \\"bridge\\": \\"0x7dd8A76bdAeBE3BBBaCD7Aa87f1D4FDa1E60f94f\\",
        \\"inbox\\": \\"0xaE21fDA3de92dE2FDAF606233b2863782Ba046F9\\",
        \\"outbox\\": \\"0x1E400568AD4840dbE50FB32f306B842e9ddeF726\\",
        \\"rollup\\": \\"0xC47DacFbAa80Bd9D8112F4e8069482c2A3221336\\",
        \\"sequencerInbox\\": \\"0x995a9d3ca121D48d21087eDE20bc8acb2398c8B1\\"
      },
      \\"nativeToken\\": \\"0x4Cb9a7AE498CEDcBb5EAe9f25736aE7d428C9D66\\",
      \\"explorerUrl\\": \\"https://explorer.xai-chain.net\\",
      \\"rpcUrl\\": \\"https://xai-chain.net/rpc\\",
      \\"isCustom\\": true,
      \\"isTestnet\\": true,
      \\"name\\": \\"Xai\\",
      \\"slug\\": \\"xai\\",
      \\"parentChainId\\": 42161,
      \\"tokenBridge\\": {
        \\"parentGatewayRouter\\": \\"0x22CCA5Dc96a4Ac1EC32c9c7C5ad4D66254a24C35\\",
        \\"childGatewayRouter\\": \\"0xd096e8dE90D34de758B0E0bA4a796eA2e1e272cF\\",
        \\"parentErc20Gateway\\": \\"0xb591cE747CF19cF30e11d656EB94134F523A9e77\\",
        \\"childErc20Gateway\\": \\"0x0c71417917D24F4A6A6A55559B98c5cCEcb33F7a\\",
        \\"parentCustomGateway\\": \\"0xb15A0826d65bE4c2fDd961b72636168ee70Af030\\",
        \\"childCustomGateway\\": \\"0x96551194230725c72ACF8E9573B1382CCBC70635\\",
        \\"parentWethGateway\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"childWethGateway\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"parentWeth\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"childWeth\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"parentProxyAdmin\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"childProxyAdmin\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"parentMultiCall\\": \\"0x90B02D9F861017844F30dFbdF725b6aa84E63822\\",
        \\"childMultiCall\\": \\"0xEEC168551A85911Ec3A905e0561b656979f3ea67\\"
      },
      \\"bridgeUiConfig\\": {
        \\"color\\": \\"#F30019\\",
        \\"network\\": {
          \\"name\\": \\"Xai\\",
          \\"logo\\": \\"/images/XaiLogo.svg\\",
          \\"description\\": \\"A chain for Web2 and Web3 gamers to play blockchain games.\\"
        },
        \\"nativeTokenData\\": {
          \\"name\\": \\"Xai\\",
          \\"symbol\\": \\"XAI\\",
          \\"logoUrl\\": \\"/images/XaiLogo.svg\\"
        },
        \\"fastWithdrawalTime\\": 900000
      }
    }
  ]
}"
`;

exports[`Transforms > updateOrbitChainsFile > should handle updating an existing chain while preserving order 1`] = `
"{
  \\"mainnet\\": [
    {
      \\"chainId\\": 2,
      \\"confirmPeriodBlocks\\": 45818,
      \\"ethBridge\\": {
        \\"bridge\\": \\"0x7dd8A76bdAeBE3BBBaCD7Aa87f1D4FDa1E60f94f\\",
        \\"inbox\\": \\"0xaE21fDA3de92dE2FDAF606233b2863782Ba046F9\\",
        \\"outbox\\": \\"0x1E400568AD4840dbE50FB32f306B842e9ddeF726\\",
        \\"rollup\\": \\"0xC47DacFbAa80Bd9D8112F4e8069482c2A3221336\\",
        \\"sequencerInbox\\": \\"0x995a9d3ca121D48d21087eDE20bc8acb2398c8B1\\"
      },
      \\"nativeToken\\": \\"0x4Cb9a7AE498CEDcBb5EAe9f25736aE7d428C9D66\\",
      \\"explorerUrl\\": \\"https://explorer.xai-chain.net\\",
      \\"rpcUrl\\": \\"https://xai-chain.net/rpc\\",
      \\"isCustom\\": true,
      \\"isTestnet\\": false,
      \\"name\\": \\"Updated Chain\\",
      \\"slug\\": \\"xai\\",
      \\"parentChainId\\": 42161,
      \\"tokenBridge\\": {
        \\"parentGatewayRouter\\": \\"0x22CCA5Dc96a4Ac1EC32c9c7C5ad4D66254a24C35\\",
        \\"childGatewayRouter\\": \\"0xd096e8dE90D34de758B0E0bA4a796eA2e1e272cF\\",
        \\"parentErc20Gateway\\": \\"0xb591cE747CF19cF30e11d656EB94134F523A9e77\\",
        \\"childErc20Gateway\\": \\"0x0c71417917D24F4A6A6A55559B98c5cCEcb33F7a\\",
        \\"parentCustomGateway\\": \\"0xb15A0826d65bE4c2fDd961b72636168ee70Af030\\",
        \\"childCustomGateway\\": \\"0x96551194230725c72ACF8E9573B1382CCBC70635\\",
        \\"parentWethGateway\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"childWethGateway\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"parentWeth\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"childWeth\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"parentProxyAdmin\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"childProxyAdmin\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"parentMultiCall\\": \\"0x90B02D9F861017844F30dFbdF725b6aa84E63822\\",
        \\"childMultiCall\\": \\"0xEEC168551A85911Ec3A905e0561b656979f3ea67\\"
      },
      \\"bridgeUiConfig\\": {
        \\"color\\": \\"#F30019\\",
        \\"network\\": {
          \\"name\\": \\"Xai\\",
          \\"logo\\": \\"/images/XaiLogo.svg\\",
          \\"description\\": \\"A chain for Web2 and Web3 gamers to play blockchain games.\\"
        },
        \\"nativeTokenData\\": {
          \\"name\\": \\"Xai\\",
          \\"symbol\\": \\"XAI\\",
          \\"logoUrl\\": \\"/images/XaiLogo.svg\\"
        },
        \\"fastWithdrawalTime\\": 900000
      }
    },
    {
      \\"chainId\\": 4,
      \\"name\\": \\"Existing Chain 4\\"
    },
    {
      \\"chainId\\": 1,
      \\"name\\": \\"Existing Chain 1\\"
    }
  ],
  \\"testnet\\": [
    {
      \\"chainId\\": 3,
      \\"name\\": \\"Existing Testnet 1\\"
    }
  ]
}"
`;

exports[`Transforms > updateOrbitChainsFile > should update the orbit chains file correctly while preserving order 1`] = `
"{
  \\"mainnet\\": [
    {
      \\"chainId\\": 2,
      \\"name\\": \\"Existing Chain 2\\"
    },
    {
      \\"chainId\\": 4,
      \\"name\\": \\"Existing Chain 4\\"
    },
    {
      \\"chainId\\": 1,
      \\"name\\": \\"Existing Chain 1\\"
    },
    {
      \\"chainId\\": 5,
      \\"confirmPeriodBlocks\\": 45818,
      \\"ethBridge\\": {
        \\"bridge\\": \\"0x7dd8A76bdAeBE3BBBaCD7Aa87f1D4FDa1E60f94f\\",
        \\"inbox\\": \\"0xaE21fDA3de92dE2FDAF606233b2863782Ba046F9\\",
        \\"outbox\\": \\"0x1E400568AD4840dbE50FB32f306B842e9ddeF726\\",
        \\"rollup\\": \\"0xC47DacFbAa80Bd9D8112F4e8069482c2A3221336\\",
        \\"sequencerInbox\\": \\"0x995a9d3ca121D48d21087eDE20bc8acb2398c8B1\\"
      },
      \\"nativeToken\\": \\"0x4Cb9a7AE498CEDcBb5EAe9f25736aE7d428C9D66\\",
      \\"explorerUrl\\": \\"https://explorer.xai-chain.net\\",
      \\"rpcUrl\\": \\"https://xai-chain.net/rpc\\",
      \\"isCustom\\": true,
      \\"isTestnet\\": false,
      \\"name\\": \\"Xai\\",
      \\"slug\\": \\"xai\\",
      \\"parentChainId\\": 42161,
      \\"tokenBridge\\": {
        \\"parentGatewayRouter\\": \\"0x22CCA5Dc96a4Ac1EC32c9c7C5ad4D66254a24C35\\",
        \\"childGatewayRouter\\": \\"0xd096e8dE90D34de758B0E0bA4a796eA2e1e272cF\\",
        \\"parentErc20Gateway\\": \\"0xb591cE747CF19cF30e11d656EB94134F523A9e77\\",
        \\"childErc20Gateway\\": \\"0x0c71417917D24F4A6A6A55559B98c5cCEcb33F7a\\",
        \\"parentCustomGateway\\": \\"0xb15A0826d65bE4c2fDd961b72636168ee70Af030\\",
        \\"childCustomGateway\\": \\"0x96551194230725c72ACF8E9573B1382CCBC70635\\",
        \\"parentWethGateway\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"childWethGateway\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"parentWeth\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"childWeth\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"parentProxyAdmin\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"childProxyAdmin\\": \\"0x0000000000000000000000000000000000000000\\",
        \\"parentMultiCall\\": \\"0x90B02D9F861017844F30dFbdF725b6aa84E63822\\",
        \\"childMultiCall\\": \\"0xEEC168551A85911Ec3A905e0561b656979f3ea67\\"
      },
      \\"bridgeUiConfig\\": {
        \\"color\\": \\"#F30019\\",
        \\"network\\": {
          \\"name\\": \\"Xai\\",
          \\"logo\\": \\"/images/XaiLogo.svg\\",
          \\"description\\": \\"A chain for Web2 and Web3 gamers to play blockchain games.\\"
        },
        \\"nativeTokenData\\": {
          \\"name\\": \\"Xai\\",
          \\"symbol\\": \\"XAI\\",
          \\"logoUrl\\": \\"/images/XaiLogo.svg\\"
        },
        \\"fastWithdrawalTime\\": 900000
      }
    }
  ],
  \\"testnet\\": [
    {
      \\"chainId\\": 3,
      \\"name\\": \\"Existing Testnet 1\\"
    }
  ]
}"
`;
